--- a/general.css
+++ b/general.css
@@ -10,7 +10,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background-image: url(./assets/images/Background2.jpg);
+    background-image: url(/assets/images/Background2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
